--- a/UiPlus/packages.config
+++ b/UiPlus/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="4.4.0" targetFramework="net452" />
+  <package id="Extended.Wpf.Toolkit" version="4.1.0" targetFramework="net452" />
   <package id="MahApps.Metro" version="2.4.7" targetFramework="net452" />
   <package id="MaterialDesignColors" version="2.0.3" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="4.2.1" targetFramework="net452" />
