--- a/UiPlus/packages.config
+++ b/UiPlus/packages.config
@@ -6,10 +6,9 @@
   <package id="LiveCharts.Core" version="0.9.8" targetFramework="net452" />
   <package id="LiveCharts.Wpf.Core" version="0.9.8" targetFramework="net452" requireReinstallation="true" />
   <package id="MahApps.Metro" version="2.4.10" targetFramework="net472" />
-  <package id="MaterialDesignColors" version="3.0.0" targetFramework="net472" />
-  <package id="MaterialDesignThemes" version="5.0.0" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="3.0.1-ci570" targetFramework="net48" />
+  <package id="MaterialDesignThemes" version="5.0.0" targetFramework="net48" />
   <package id="MaterialDesignThemes.MahApps" version="1.0.0" targetFramework="net472" />
-  <package id="Microsoft.Web.WebView2" version="1.0.2365.46" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.77" targetFramework="net472" />
   <package id="RhinoCommon" version="6.35.21222.17001" targetFramework="net452" />
 </packages>
